V1.3.3 2015-11-4
	- change parent pom

V1.3.2 2015-10-29
	- TDQ-10903 optimize dictionaries
	- adjust OPEN/CLOSE type for some indexes

V1.3.1 2015-10-22 (for Studio 6.1.0)
    - TDQ-10413 compute list of invalid values according to semantic type
    - TDQ-10981 concurrent analyzer
    - TDQ-10988 latin1 supplement support in pattern statistics


===2015-9-11===
1. Add exist method in Analyzers.Result class. -mzhao
===2015-9-22===
1. Add concurrent analyzer -mzhao
2. Fix return twice the same value issue on AttributeValues class.